# RAG-Job-Hunting-agent

./: .env.example  .gitignore  2026-07-06-agentic-rag-job-assistant-design.md  README.md  TODO-待优化项.md  deploy.bat  deploy.sh  docker-compose.dev.yml  docker-compose.yml  start.bat  start.sh
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: config.py  main.py
backend/src/agent/: graph.py  llm_client.py  prompts.py  reflection.py  state.py  tools.py
backend/src/api/: interview.py  jd.py  match.py  resume.py
backend/src/models/: schemas.py
backend/src/services/: chunker.py  embeddings.py  parser.py  vectordb.py
backend/tests/: test_api_interview.py  test_api_match.py  test_chunker.py  test_parser.py
docs/: 部署与运维指南.md
docs/superpowers/plans/: 2026-07-06-agentic-rag-implementation-plan.md  2026-07-12-saas-ui-redesign-implementation-plan.md
docs/superpowers/specs/: 2026-07-12-saas-ui-redesign-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: AnswerInput.vue  AppHeader.vue  ChatBubble.vue  FeedbackCard.vue  FileDropZone.vue  InfoCard.vue  QuestionCard.vue  QuestionReview.vue  ScoreCircle.vue  ScoreSummary.vue  StudyPlan.vue  TextPasteArea.vue  ThinkingStream.vue  WeakAreaAnalysis.vue
frontend/src/composables/: useSSE.ts
frontend/src/pages/: InterviewPage.vue  InterviewReport.vue  MatchReport.vue  UploadPage.vue
frontend/src/router/: index.ts
frontend/src/types/: index.ts
