[project]
name = "agentic-rag-backend"
version = "0.1.0"
description = "Agentic RAG Job Search Assistant - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "openai>=1.58.0",
    "tavily-python>=0.5.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
